[package]
name = "mediumi-aac"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "AAC codec parser and serializer"
readme = "README.md"
repository.workspace = true
license = "MIT"
keywords = ["codec", "audio"]
categories = ["multimedia", "multimedia::audio"]
