[package]
name = "mediumi-mpeg2ts"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "MPEG2-TS muxer/demuxer"
readme = "README.md"
repository.workspace = true
license = "MIT"
keywords = ["multimedia", "container", "video", "audio"]
categories = ["multimedia", "multimedia::video", "multimedia::audio"]
